xx-xx-xxxx v2.x.x.x:
* Added facebook link in base.htm

18-06-2016 v2.6.7.0:
* Lanuage switcher now only changes for session, until saved permanently.
* Security leaks fixed with regard to permission on modules.
* The jumbotron is now available in Engels.
* Fixed the company admin forms.

08-06-2016 v2.6.6.4:
* Added Open Graph tags in base.htm

06-06-2016 v2.6.6.0:
* DOMjudge integration: Some improvements on scoreboard.

29-05-2016 v2.6.5.0:
* DOMjudge integration: added scoreboard table for embedding in slide.
* Moved delete button on edit page form.

14-05-2016 v2.6.4.0:
* DOMjudge integration for the BAPC stunt
* Automatic committee creation after creating group
* Attempt to fix minutes date

18-04-2016 v2.6.3.1:
* Added course and education management pages
* Fixed bug in PimPy minute parsing
* Changed Mollie costs to 0.29 EUR
* Fix dotdotdot problem in Firefox
* Added pre-commit codestyle check

12-03-2016 v2.6.0.0:
* Users removed from groups are automatically added to the activeAllumniList
* Pimpy name matching has been updated
* Nice interactive form selection
* Start refactoring of the codebase (moved lots of stuff to different places)
* Make exam search case insensitive
* Add captcha to bug report and enable it again
* Start with adding Search Engine Optimazation
* Made searching in examnation page case-insensitive
* Fixed labels in sign-up form
* Fixed blank test type in examination page
* Jumbotron added on the homepage (large banner with some info)
* Homepage is now somewhat cleaner (lots of lines and stuff removed)
* Added 'dotdotdot' jquery library. Automatically works on the class 'dotdotdot'

18-02-2016 v2.5.1.1:
* Disable bugreports because of spammers

13-02-2016 v2.5.1.0:
* Update: Removed separate gmail for password requests, now using google apps
* Update baas32 to fix parsing PimPy tasks
* Added the ability to disable users
* Added types of exams to examinationts (retake, final, etc.)
* Removed 403 status code for the homepage