@@ -1,5 +1,6 @@
 xx-xx-xxxx v2.x.x.x:
 * Added facebook link in base.htm
+* Fixed bug where people on the reservelist of an activity were able to pay for the activity
 
 18-06-2016 v2.6.7.0:
 * Lanuage switcher now only changes for session, until saved permanently.
